<resources>
    <string name="app_name">EvaluApp</string>
    <string name="title_tests">Exámenes</string>
    <string name="title_results">Resultados</string>

    <string name="login">Iniciar sesión</string>
    <string name="im_teacher">Soy profesor</string>
    <string name="im_student">Soy estudiante</string>
    <string name="my_tests">Mis exámenes</string>
    <string name="results">Resultados</string>
    <string name="you_created_no_tests">Aún no has creado ningún examen</string>
    <string name="create_test_now">Crea uno ahora</string>
    <string name="now_add_a_question">Aún no tienes preguntas</string>
    <string name="enter_title">Ingresa el título</string>
    <string name="save">Guardar</string>
    <string name="error_must_insert_title">Debes ingresar un título para el examen</string>
    <string name="add_question">Agregar pregunta</string>
    <string name="questions">Preguntas</string>
    <string name="true_false">Falso/Verdadero</string>
    <string name="multiple_choice">Selección múltiple</string>
    <string name="complete">Completar</string>
    <string name="edit_question">Editar pregunta</string>
    <string name="error_must_add_questions">Debes agregar preguntas al examen</string>
    <string name="description">Descripción</string>
    <string name="answer">Respuesta</string>
    <string name="true_">Verdadero</string>
    <string name="false_">Falso</string>
    <string name="right_answer">Respuesta correcta</string>
    <string name="incorrect_answer">Respuesta incorrecta</string>
    <string name="error_must_insert_right_answer">Debes insertar la respuesta correcta</string>
    <string name="error_must_insert_two_answers_at_least">Debes ingresar al menos dos respuestas</string>
    <string name="error_must_write_description">Debes escribir una descripción para la pregunta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="answers_saved">Tus respuestas han sido guardadas</string>
    <string name="what_is_your_id">¿Cuál es tu identificación?</string>
    <string name="enter">Entrar</string>
    <string name="student">Estudiante: %1$s</string>
</resources>
