<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="io.github.juanpmarin.evaluapp.domain.QuestionType" />

        <variable
            name="questionType"
            type="io.github.juanpmarin.evaluapp.domain.QuestionType" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        tools:context=".ui.questions.EditQuestionFragment">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textCapSentences" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{questionType == QuestionType.COMPLETE ? View.VISIBLE : View.GONE}">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer"
                android:inputType="textCapSentences" />

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:visibility="@{questionType == QuestionType.TRUE_FALSE ? View.VISIBLE : View.GONE}">

            <RadioButton
                android:id="@+id/radio_true"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:checked="true"
                android:text="@string/true_" />

            <RadioButton
                android:id="@+id/radio_false"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/false_" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{questionType == QuestionType.MULTIPLE_CHOICE ? View.VISIBLE : View.GONE}">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/right_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/right_answer"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/incorrect_answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/incorrect_answer"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/incorrect_answer_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/incorrect_answer"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/incorrect_answer_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/incorrect_answer"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>
</layout>
